feat: Migrando pra GraalVM